objects/Foot_Traffic__c.object
<CustomObject>
    <fields>
        <fullName>Be_back_Visits__c</fullName>
        <label>Be-back Visits</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_time_visits__c</fullName>
        <label>First-time visits</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subdivision</label>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Foot Traffic</relationshipLabel>
        <relationshipName>Foot_Traffic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Traffic_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Traffic Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Foot Traffic Entry</label>
    <nameField>
        <displayFormat>FT-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foot Traffic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>